NXT-2108: Code clean-up, renaming and re-formatting.
NXT-2108 (Node recommendations are never automatically fetched or updated)